fixed spacing & seperate portfolio/playground

--- a/styles/playground.css
+++ b/styles/playground.css
@@ -2,7 +2,7 @@ body {
     font-family: Helvetica, Arial, sans-serif;
     line-height: 1.55em;;
     margin: 0;
-    cursor: help;
+    /* cursor: help; */
   }
   
   footer {
@@ -16,6 +16,32 @@ body {
     max-width: 100%;
     height: auto;
   }
+
+  /* read more button styling */
+.read-more-button {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  padding: 7.5px;
+}
+
+.read-more-button:hover {
+background-color: rgb(227, 227, 227);
+color: black;
+}
+
+#more {
+display: none;
+}
+
+li {
+list-style-type: none;
+}
+
+.img-border {
+/* border: 1px solid; */
+box-shadow: 0px 0px 10px #c8c8c8;
+}
 
 /* Image grid here, I'm sure there's a better solution */
   img.play-tiles-1 {
@@ -147,11 +173,9 @@ ul {
   line-height: 1.7em;
 }
 
-li {
-  display: inline;
-}
-
 li.nav-bar{
   padding-right: 4vw;
+  display: inline;
+
 }
 /* */
