--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,10 @@ footer {
   padding-right: 5vw;
 }
 
+.footer-line {
+  margin-top: 5vw;
+}
+
 img {
   max-width: 100%;
   height: auto;
